--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,21 +1,31 @@
 version: "3.9"
+
 services:
+
   eureka:
     image: springcloud/eureka
     ports:
     - 8761:8761
+
   consul:
     image: consul
     ports:
     - 8500:8500
+
   zookeeper:
     image: zookeeper
     restart: always
     ports:
     - 2181:2181
-    - 2888:2888
-    - 3888:3888
-    - 8080:8080
+
+  zkui:
+    build:
+      ./zkui
+    ports:
+    - 9090:9090
+    depends_on:
+      - zookeeper
+
   rabbitmq:
     image: rabbitmq:management
     ports:
