--- a/docker/zkui/Dockerfile
+++ b/docker/zkui/Dockerfile
@@ -2,7 +2,7 @@ FROM java:8
 
 WORKDIR /var/app
 
-ADD zkui-*.jar /var/app/zkui.jar
+ADD zkui.jar /var/app/zkui.jar
 ADD config.cfg /var/app/config.cfg
 ADD bootstrap.sh /var/app/bootstrap.sh
 
