--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
         <module>config</module>
         <module>bus</module>
         <module>netflix</module>
+        <module>kubernetes</module>
     </modules>
 
     <properties>
