--- a/netflix/eureka/eureka-server/pom.xml
+++ b/netflix/eureka/eureka-server/pom.xml
@@ -2,19 +2,14 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <parent>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.6.7</version>
-        <relativePath/> <!-- lookup parent from repository -->
-    </parent>
     <groupId>com.example.codingob</groupId>
     <artifactId>eureka-server</artifactId>
     <version>1.0.0</version>
-    <name>${project.artifactId}</name>
-    <description>Demo ${project.artifactId} for Spring Boot</description>
+    <name>eureka-server</name>
+    <description>Demo eureka-server for Spring Boot</description>
     <properties>
         <java.version>8</java.version>
+        <spring-boot.version>2.6.7</spring-boot.version>
         <spring-cloud.version>2021.0.2</spring-cloud.version>
     </properties>
     <dependencies>
@@ -36,6 +31,13 @@
     </dependencies>
     <dependencyManagement>
         <dependencies>
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-dependencies</artifactId>
+                <type>pom</type>
+                <scope>import</scope>
+                <version>${spring-boot.version}</version>
+            </dependency>
             <dependency>
                 <groupId>org.springframework.cloud</groupId>
                 <artifactId>spring-cloud-dependencies</artifactId>
